--- a/config.sample.ini
+++ b/config.sample.ini
@@ -4,8 +4,8 @@
 
 [login]
 ; 在此填入iaaa用户名与密码
-userName: xxxxxxxxxx
-password: xxxxxxxxxx
+userName: 2101210965
+password: pkuw1479
 
 ;===================================
 
@@ -17,7 +17,7 @@ password: xxxxxxxxxx
 出入校事由: 学业
 
 ; 不宜过长
-出入校事由详细描述: 物理学院
+出入校事由详细描述: 上课
 
 ;===================================
 
@@ -26,7 +26,7 @@ password: xxxxxxxxxx
 出校目的地: 北京
 
 ; 不宜过长，建议“A地-B地-C地”格式
-出校行动轨迹: 燕园-物理学院
+出校行动轨迹: 燕园-万柳
 
 ;===================================
 
@@ -42,7 +42,7 @@ password: xxxxxxxxxx
 居住地所在区: 海淀区
 
 ; 不宜过长
-居住地所在街道: 中关村街道
+居住地所在街道: 万柳公寓
 
 ;===================================
 
