--- a/config.sample.ini
+++ b/config.sample.ini
@@ -4,8 +4,8 @@
 
 [login]
 ; 在此填入iaaa用户名与密码
-userName: 2101210965
-password: pkuw1479
+userName: xxxxxxxx
+password: xxxxxxxx
 
 ;===================================
 
